#include "Juego.hpp"
#include "Puntaje.hpp"
#include <list>
class Mejorpuntaje

{ 
private:
lis<Puntaje> puntajes  ; 
public: 
Mejorpuntaje(/*args */){}
~Mejorpuntaje(){}
};