
class Nube 

{ 
private:
lis<> ; 
public: 
Nube(/*args */){}
~Nube(){}
};