#include "Dinosaurio.hpp"
#include <lis>

class Vida
{ 
private:
lis<Dinosaurio> dinosaurios ; 
public: 
Vida(/*args */){}
~Vida(){}
};